<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Park here</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_settings">Settings</string>

    <string name="search_hint">Search friend</string>

    <string name="register_now">Register now!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="reset_instructions">Enter Email to get password reset instructions.</string>
    <string name="reset">RESET</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="register">REGISTER</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nickname">Nickname</string>
    <string name="choose">CHOOSE</string>
    <string name="repeat_password">Repeat password</string>
    <string name="parking_name">Name</string>
    <string name="parking_desc">Description</string>
    <string name="parking_type">Type</string>
    <string name="parking_long">Longitude</string>
    <string name="parking_lati">Latitude</string>
    <string name="add">ADD</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="Add_new_parking">ADD PARKING</string>
    <string name="change_image">CHANGE IMAGE</string>

    <string name="work_in_back">Work in background</string>
    <string name="show_players">Show other users on the map</string>
    <string name="show_friends">Show friends on the map</string>
    <string name="gps_refresh">GPS refresh time</string>
    <string name="about">by luxtech</string>
    <string name="save">SAVE</string>
    <string name="camera_upload">Camera</string>
    <string name="gallery_upload">Gallery</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="new_password">New password</string>
    <string name="btn_change">CHANGE</string>
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Allow Park here app to access this device\'s location?</string>
    <string name="ok">OK</string>
    <string-array name="gps_refresh_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="parking_type" color="@color/blue">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="search_type">
        <item>by name</item>
        <item>by distance</item>
        <item>by type</item>
        <item>Type of search</item>
    </string-array>

    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>

    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a Device to connect to:</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_devicelist">Device List</string>
    <string name="title_player_info">Player info</string>
    <string name="directionsApiKey">AIzaSyAPMXnzeKDxdofUT2VRA_CaraGBodv6RCI</string>
    <string name="plane_finding">Searching for surfaces&#8230;</string>

</resources>
