<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent">

<!--    <item-->
<!--        android:id="@+id/navigation_logo"-->
<!--        android:checkable="false"-->
<!--        android:icon="@mipmap/logo"-->
<!--        android:title="" />-->

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/gradient_home"
        android:background="@color/transparent"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friends"
        android:enabled="true"
        android:icon="@drawable/gradient_friends"
        android:background="@color/transparent"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/gradient_settings"
        android:background="@color/transparent"
        android:title="@string/title_settings" />

</menu>
