<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvDeviceListPairedDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingStart="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:id="@+id/lvDeviceListPairedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/tvDeviceListNewDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingStart="5dp"
        android:text="@string/title_other_devices"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <ListView
        android:id="@+id/lvDeviceListNewDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/btnDeviceListScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:visibility="gone"/>

</LinearLayout>