<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="rs.elfak.mosis.nikolamitic.bottomnavigationview.Home.AddParkingActivity"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/add_parking_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parking_name"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:backgroundTint="@color/blue"
                android:inputType="text"/>

            <EditText
                android:id="@+id/add_parking_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parking_desc"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:backgroundTint="@color/blue"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/parking_type"
                    android:paddingLeft="15dp"
                    android:textColor="@color/blue"/>

                <Spinner
                    android:id="@+id/add_parking_type"
                    android:entries="@array/parking_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:popupBackground="@color/white"
                    android:backgroundTint="@color/blue">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/parking_long"
                    android:paddingLeft="15dp"
                    android:textColor="@color/blue"/>

                <EditText
                    android:id="@+id/add_parking_long"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/blue"
                    android:enabled="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/parking_lati"
                    android:paddingLeft="15dp"
                    android:textColor="@color/blue"/>

                <EditText
                    android:id="@+id/add_parking_lati"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/blue"
                    android:enabled="false"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/add_parking"
                    android:onClick="add_parking_click"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:background="@color/blue"/>

                <Button
                    android:id="@+id/cancel_parking"
                    android:onClick="cancel_parking_click"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:background="@color/blue"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

