<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:gravity="center_vertical"
    tools:context="rs.elfak.mosis.nikolamitic.bottomnavigationview.Login.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/logo"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sing_up_input_firstname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textCapSentences"
                        android:hint="@string/firstname"
                        android:textColor="@color/blue"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sing_up_input_lastname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textCapSentences"
                        android:hint="@string/lastname"
                        android:textColor="@color/blue"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sing_up_input_nickname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textCapSentences"
                        android:hint="@string/nickname"
                        android:textColor="@color/blue"/>

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:textSize="15dp"
                        android:paddingLeft="4dp"
                        android:id="@+id/sign_up_date_of_birth"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose"
                        android:layout_alignParentRight="true"
                        android:textSize="15dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:id="@+id/btn_datepicker"/>

                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sing_up_input_email">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/blue" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sign_up_input_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/ic_password_blue_24dp"
                    app:passwordToggleTint="@color/blue">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/blue" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sign_up_input_repeat_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/ic_password_blue_24dp"
                    app:passwordToggleTint="@color/blue">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/blue" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_button"
                    android:onClick="sign_up_button_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/blue"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
